--- a/.github/workflows/status-check.yml
+++ b/.github/workflows/status-check.yml
@@ -1,10 +1,6 @@
 name: Status Check Workflow
 
-on:
-  push:
-    branches: [ "**" ]
-  pull_request:
-    branches: [ "**" ]
+on: workflow_call
 
 jobs:
   build:
