--- a/.github/workflows/statuscheck-runner.yml
+++ b/.github/workflows/statuscheck-runner.yml
@@ -26,27 +26,6 @@ jobs:
     name: Get Pull Request Head SHA
     needs: checkif
     if: ${{ needs.checkif.outputs.shouldc == 'true' }}
-    runs-on: ubuntu-latest
-    outputs:
-      psha: ${{ steps.getsha.outputs.psha }}
-    env:
-      slink: ${{ github.event.issue.pull_request.url }}
-    steps:
-      - name: Get SHA
-        id: getsha
-        run: |
-          json_data=$(curl -s "$slink")
-          sha=$(echo "$json_data" | jq -r '.head.ref')
-          echo "psha=$sha" >> $GITHUB_OUTPUT
-  call-check-workflow:
-    name: Call Check Overflow
-    needs: get-head-sha
-    runs-on: ubuntu-latest
-    steps:
-      - name: Call
-        uses: benc-uk/workflow-dispatch@v1
-        with:
-          workflow: status-check.yml
-          ref: ${{ needs.get-head-sha.outputs.psha }}
-          inputs: '{ "psha": "${{ needs.get-head-sha.outputs.psha }}"}'
-    
+    uses: Darock-Studio/Darock-Bili/.github/workflows/status-check.yml@main
+    with:
+      psha: ${{ github.event.comment.pull_request.head.sha }}
