--- a/.github/workflows/statuscheck-runner.yml
+++ b/.github/workflows/statuscheck-runner.yml
@@ -27,4 +27,5 @@ jobs:
     needs: checkif
     if: ${{ needs.checkif.outputs.shouldc == 'true' }}
     uses: Darock-Studio/Darock-Bili/.github/workflows/status-check.yml@main
-    
+    with:
+      psha: ${{ github.event.comment.pull_request.head.sha }}
