--- a/.github/workflows/status-check.yml
+++ b/.github/workflows/status-check.yml
@@ -1,10 +1,11 @@
 name: Status Check Workflow
 
 on: 
-  workflow_dispatch:
+  workflow_call:
     inputs:
       psha:
         required: true
+        type: string
 
 jobs:
   build:
