--- a/.github/workflows/status-check.yml
+++ b/.github/workflows/status-check.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.inputs.psha }}
+          ref: ${{ inputs.psha }}
         
       - name: Set Xcode Version
         run: sudo xcode-select -s /Applications/Xcode_15.0.app
