--- a/.github/workflows/status-check.yml
+++ b/.github/workflows/status-check.yml
@@ -10,6 +10,9 @@ jobs:
   build:
     name: Check Build
     runs-on: macos-13
+    permissions:
+      checks: write
+      statuses: write
     env:
       FIN_STATUS: "error"
     steps:
