--- a/.github/workflows/status-check.yml
+++ b/.github/workflows/status-check.yml
@@ -15,6 +15,7 @@ jobs:
       statuses: write
     env:
       FIN_STATUS: "error"
+      GH_TOKEN: ${{ github.token }}
     steps:
       - name: Update Check Status
         run: |
