--- a/.github/workflows/status-check.yml
+++ b/.github/workflows/status-check.yml
@@ -66,7 +66,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${{ github.repository }}/statuses/$GITHUB_SHA \
-            -f state='$FIN_STATUS' \
+            -f state='${{ env.FIN_STATUS }}' \
             -f target_url='https://github.com/Darock-Studio/Darock-Bili/actions/runs/${{ github.run_id }}' \
             -f context='API Status Checker' 
     
