--- a/.github/workflows/status-check.yml
+++ b/.github/workflows/status-check.yml
@@ -54,9 +54,8 @@ jobs:
         run: echo "FIN_STATUS=failure" >> $GITHUB_ENV
 
       - name: Build DarockBili App
-        continue-on-error: true
         run: |
-          output=$(xcodebuild -scheme 'DarockBili Watch App' -configuration Release build CODE_SIGN_IDENTITY=""); exit_code=$?; while IFS= read -r line; do if [[ "$line" =~ ^/Users/runner/work/Darock-Bili/Darock-Bili/.*:[0-9]+:[0-9]+:[[:space:]](error|warning|note): ]]; then type="${BASH_REMATCH[1]}"; case $type in "error") color='\e[91m';; "warning") color='\e[93m';; "note") color='\e[94m';; esac; echo -e "${color}$line\e[0m"; IFS= read -r line; echo "$line"; IFS= read -r line; echo "$line"; echo; fi; done <<< "$output"; exit $exit_code
+          xcodebuild -scheme 'DarockBili Watch App' -configuration Release build CODE_SIGN_IDENTITY=""
           echo "FIN_STATUS=success" >> $GITHUB_ENV
 
       - name: Update Check Status
