--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,7 +19,7 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_15.0.app
 
       - name: Prepare Version Folder
-        run: mkdir ../vers
+        run: mkdir vers
 
       - name: Checkout Version Files
         uses: actions/checkout@v3
@@ -27,18 +27,18 @@ jobs:
           ref: release-vers
           persist-credentials: false
           fetch-depth: 0
-          path: ../vers
+          path: vers
 
       - name: Change Project Version
         run: |
-          read MVER < ../vers/ver.txt
+          read MVER < vers/ver.txt
           MVER = $MVER+1
-          rm ../vers/ver.txt
-          echo $MVER >> ../vers/ver.txt
+          rm vers/ver.txt
+          echo $MVER >> vers/ver.txt
           agvtool new-version -all $MVER
 
       - name: Commit Files
-        working-directory: ../vers
+        working-directory: vers
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
@@ -49,7 +49,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: release-vers
-          directory: ../vers
+          directory: vers
 
       - name: Archive DarockBili App
         run: |
