--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           upload-to-testflight: false
           configuration: Release
-          export-method: app-store
+          export-method: appstore
           scheme: DarockBili Watch App
           output-path: MeowBili-Release.ipa
           apple-key-id: ${{ secrets.ASCAPI_KEY_ID }}
