--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -60,11 +60,11 @@ jobs:
         run: gem install fastlane
 
       - name: Build and Archive
-        uses: sparkfabrik/ios-build-action@v2.3.0
+        uses: sparkfabrik/ios-build-action@v2.3.2
         with:
           upload-to-testflight: false
           configuration: Release
-          export-method: appstore
+          export-method: app-store
           scheme: DarockBili Watch App
           output-path: MeowBili-Release.ipa
           apple-key-id: ${{ secrets.ASCAPI_KEY_ID }}
