--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -184,6 +184,43 @@ jobs:
           name: Xcode Archive
           path: ./DarockBili_Release.xcarchive
 
+      - name: Install the Apple certificate and provisioning profile for Xcode
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      - name: Set Environment Varibles
+        run: |
+          CI=TRUE
+          CI_ARCHIVE_PATH=/Volumes/workspace/build.xcarchive
+          CI_BUNDLE_ID=com.darock.DarockBili
+          CI_PRODUCT=DarockBili
+          CI_PRODUCT_PLATFORM=iOS
+          CI_XCODEBUILD_ACTION=archive
+          CI_XCODE_PROJECT=DarockBili.xcodeproj
+          CI_XCODE_SCHEME=DarockBili
+          TMPDIR=$RUNNER_TEMP
+
       - name: Export IPA File
         run: |
           xcodebuild -exportArchive -archivePath ./DarockBili_Release.xcarchive -exportPath ./ -exportOptionsPlist ./ExportOptions.plist -DVTProvisioningIsManaged=YES -DVTSkipCertificateValidityCheck=YES
